--- a/hamlet.html
+++ b/hamlet.html
@@ -69,7 +69,7 @@
         <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:280px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
