--- a/videolab.html
+++ b/videolab.html
@@ -50,7 +50,7 @@
         <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -96,10 +96,10 @@
       <!--  CONTENT MAIN PART -->
       <div class="container">
         <!--  ARTICLE STYLED PORTFOLIO -->
-        <div class="row">
+        <div class="row animated bounceInLeft">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 ">
             <!-- category title -->
             <div class="category title" style="">
               <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
@@ -127,7 +127,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 ">
             <!-- category title -->
             <div class="category title">
               <h4>VIDEO LAB</h4>
