--- a/archi.html
+++ b/archi.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/icon.css">
     <link rel="stylesheet" href="css/animate.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
-    <title>BYUNNNN</title>
+    <title>Karam Byun</title>
     <!-- ADDING CUSTOM CSS STYLE -->
     <style>
       p { font-family: Georgia, Times, Serif;}
@@ -46,10 +47,10 @@
       <!--  HEADER -->
       <div class="container header" style="padding-top: 30px">
         <!--  TITLE BOX-->
-        <div class="row">
+        <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -75,21 +76,32 @@
               <li><a class="link" id="nav" href="index.html">Works</a></li>
               <li><a class="link" id="nav" href="grphic_index.html">Graphic Design</a></li>
               <li><a class="link" id="nav" href="coding_index.html">Coding Design</a></li>
+              <li><a class="link" id="nav" href="research_index.html">Research Artist</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
           </div>
           <!-- <hr width="97%"> -->
-        </div> <!-- END OF TITLE BOX -->
+
+        </div> <!-- END OF TITLE BOX ROW -->
+        <div style="float:right;position:relative">
+          <ul class="soc">
+              <!-- <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li> -->
+              <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
+              <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
+              <li><a class="soc-github" href="https://github.com/crzikrn"></a></li>
+              <li><a class="soc-vimeo soc-icon-last" href="http://vimeo.com/crzikrn"></a></li>
+          </ul>
+        </div>
       </div>
 
       <!--  CONTENT MAIN PART -->
       <div class="container">
         <!--  ARTICLE STYLED PORTFOLIO -->
-        <div class="row">
+        <div class="row animated bounceInLeft">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
               <h4>CODING <a href="index.html"><</a> </h4>
@@ -118,7 +130,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
             <!-- category title -->
             <div class="category title">
               <h4>ARCHITECTURAL GRAFFITI</h4>
