--- a/listening.html
+++ b/listening.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/icon.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
-    <title>BYUNNNN</title>
+    <title>Karam Byun</title>
     <!-- ADDING CUSTOM CSS STYLE -->
     <style>
       p { font-family: Georgia, Times, Serif;}
@@ -46,10 +47,10 @@
       <!--  HEADER -->
       <div class="container header" style="padding-top: 30px">
         <!--  TITLE BOX-->
-        <div class="row">
+        <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -60,8 +61,12 @@
 
           </div>
           <!--  PHRASE-->
-          <div class="container-fluid">
-            <p><em>Musings of technology. Ponderings of Design.</em></p>
+          <div class="container">
+            <p><em>
+
+              A Digital/Graphic Designer.
+              <br>A Creative HTML Developer.
+            </em></p>
           </div>
           <!-- <hr width="97%"> -->
           <!--  NAVIGATION -->
@@ -69,21 +74,34 @@
             <ul class="list-inline" style="margin-bottom: 5px">
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
+              <li><a class="link" id="nav" href="grphic_index.html">Graphic Design</a></li>
+              <li><a class="link" id="nav" href="coding_index.html">Coding Design</a></li>
+              <li><a class="link" id="nav" href="research_index.html">Research Artist</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
           </div>
           <!-- <hr width="97%"> -->
-        </div> <!-- END OF TITLE BOX -->
+
+        </div> <!-- END OF TITLE BOX ROW -->
+        <div style="float:right;position:relative">
+          <ul class="soc">
+              <!-- <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li> -->
+              <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
+              <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
+              <li><a class="soc-github" href="https://github.com/crzikrn"></a></li>
+              <li><a class="soc-vimeo soc-icon-last" href="http://vimeo.com/crzikrn"></a></li>
+          </ul>
+        </div>
       </div>
 
       <!--  CONTENT MAIN PART -->
       <div class="container">
         <!--  ARTICLE STYLED PORTFOLIO -->
-        <div class="row">
+        <div class="row animated bounceInLeft">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
               <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
@@ -112,7 +130,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
             <!-- category title -->
             <div class="category title">
               <h4>I'M LISTENING</h4>
@@ -131,11 +149,11 @@
               <div class="col-md-4">
 
                 <a href="image/listen_00.jpg" data-lightbox="data-box">
-                  <img src="image/listen_00.jpg" class="img-responsive"></a>
+                  <img src="image/listen_00.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_01.jpg" data-lightbox="data-box">
-                  <img src="image/listen_01.jpg" class="img-responsive"></a>
+                  <img src="image/listen_01.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_02.jpg" data-lightbox="data-box">
-                  <img src="image/listen_02.jpg" class="img-responsive"></a>
+                  <img src="image/listen_02.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <!-- <img src="image/data_03.png" class="img-responsive"> -->
               </div>
 
@@ -164,41 +182,41 @@
 
               <div class="col-md-4 col-lg-4">
                 <a href="image/listen_03.jpg" data-lightbox="data-box">
-                <img src="image/listen_03.jpg" class="img-responsive"></a>
+                <img src="image/listen_03.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_04.jpg" data-lightbox="data-box">
-                <img src="image/listen_04.jpg" class="img-responsive"></a>
+                <img src="image/listen_04.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_05.jpg" data-lightbox="data-box">
-                <img src="image/listen_05.jpg" class="img-responsive"></a>
+                <img src="image/listen_05.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_06.jpg" data-lightbox="data-box">
-                <img src="image/listen_06.jpg" class="img-responsive"></a>
+                <img src="image/listen_06.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_07.jpg" data-lightbox="data-box">
-                <img src="image/listen_07.jpg" class="img-responsive"></a>
+                <img src="image/listen_07.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
 
               <div class="col-md-4 col-lg-4">
                 <a href="image/listen_08.jpg" data-lightbox="data-box">
-                <img src="image/listen_08.jpg" class="img-responsive"></a>
+                <img src="image/listen_08.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_09.jpg" data-lightbox="data-box">
-                <img src="image/listen_09.jpg" class="img-responsive"></a>
+                <img src="image/listen_09.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_10.jpg" data-lightbox="data-box">
-                <img src="image/listen_10.jpg" class="img-responsive"></a>
+                <img src="image/listen_10.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_11.jpg" data-lightbox="data-box">
-                <img src="image/listen_11.jpg" class="img-responsive"></a>
+                <img src="image/listen_11.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_12.jpg" data-lightbox="data-box">
-                <img src="image/listen_12.jpg" class="img-responsive"></a>
+                <img src="image/listen_12.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
 
               <div class="col-md-4 col-lg-4">
                 <a href="image/listen_13.jpg" data-lightbox="data-box">
-                <img src="image/listen_13.jpg" class="img-responsive"></a>
+                <img src="image/listen_13.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_14.jpg" data-lightbox="data-box">
-                <img src="image/listen_14.jpg" class="img-responsive"></a>
+                <img src="image/listen_14.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_15.jpg" data-lightbox="data-box">
-                <img src="image/listen_15.jpg" class="img-responsive"></a>
+                <img src="image/listen_15.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_16.jpg" data-lightbox="data-box">
-                <img src="image/listen_16.jpg" class="img-responsive"></a>
+                <img src="image/listen_16.jpg" class="img-responsive wow animated fadeInUp"></a>
                 <a href="image/listen_17.jpg" data-lightbox="data-box">
-                <img src="image/listen_17.jpg" class="img-responsive"></a>
+                <img src="image/listen_17.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
 
 
@@ -224,6 +242,8 @@
       </div>
     </div>
     <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script> new WOW().init(); </script>
       <script>
         lightbox.option({
           'resizeDuration': 200,
