--- a/archi.html
+++ b/archi.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING <a href="index.html"><</a> </h4>
+              <h4> <a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2014</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="hamlet.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="typo.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,9 +139,18 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.</p>
+            <h1>When you have technology that creates artistic graphics, how do you use it pragmatically?</h1>
+            <p>
+              This personal project was about using graphical technology for practical uses.
+              <a href="http://000000book.com">000000book.com</a> is a site where graffiti is translated into digital data points.
+              Using graffiti data points as a brush, I was able to simulate analog architectural drawings.
+              By moving the points on a canvas by rotation of 3D camera movements. This was simulated pencil-drawn parametric design.
+            </p>
+            <p>
+              Technically speaking, I used processing to mine xml graffiti data list and rendered in them real-time.
+              I then used camera 3d movements to keep handlers in check. And let the rendering of 3D draw on the canvas.
+            </p>
 
-            <p>Used processing to mine xml graffiti data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
             <hr>
             <!-- project image -->
             <div class="image">
@@ -152,8 +161,13 @@
                 <a href="image/graf_00.jpg" data-lightbox="graf-box"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
               </div>
               <div class="col-md-6">
-                <a href="image/graf_01.jpg" data-lightbox="graf-box"><img src="image/graf_01.jpg" class="img-responsive"></a>
 
+                <a href="image/graf_01.jpg" data-lightbox="graf-box"><img src="image/graf_01.jpg" class="img-responsive"></a>
+                <p>
+                  I was able to produce beautiful creative coded art, but needed a pragmatic solution for these forms.
+                  It became a tool to create patterns and use the art as background resources for poster typography.
+                  What are others way of using graphics? How does one balance between aesthetics and pragmatics?
+                </p>
               </div>
 
 
