--- a/carni.html
+++ b/carni.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
+              <h4><a href="index.html">&nbsp;</a></h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2014</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="listening.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="about.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,7 +139,20 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>This is a writing on the aftermath of Carnisseur™, a fictional food corporation placed not so far into the future, its emergence and its lessons. The whole collborative project is based on the premise that food future will be inevitably exploited by capitalistic tools. A criticism on corporations that commercializes basic rights to live as a human being.</p>
+            <h1>Using patent as a platform for critique.</h1>
+            <p>
+              This is a writing on the aftermath of Carnisseur™,
+              a fictional food corporation placed not so far into the future, its emergence and its lessons.
+              The whole collborative project is based on the premise that food future will be
+              inevitably exploited by capitalistic tools.
+              A criticism on corporations that commercializes basic rights to live as a human being.
+            </p>
+
+            <p>
+              Using critical design methodologies, we created stories and patents to design a believeable future.
+              It was a form to bring audience to imagine with us. For a deeper look and thought of how food corporations manages systems
+              in one of our most basic needs and rights of food. 
+            </p>
 
             <p><span id="more"><a href="http://www.byunnnn.com/tte-000008-carnisseur-aftermath-its-emergence-its-lessons/"><b>Documentation: Carnisseur Aftermath Blog</b></a></span><p>
 
