--- a/data_analysis.html
+++ b/data_analysis.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
+              <h4> <a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2014</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="divine.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="listening.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,7 +139,24 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250"><b>More @Medium</b></a></span> </p>
+            <h1>How do you use governmental free data to make meaningful impact?</h1>
+            <p>
+              This project is about making an artistic statement with free data,
+              disguised as a data analysis post. The project starts in the permise that governments will not
+              publish free data detrimental to their image. It was a stab at making meaningful posts with so little data.
+            </p>
+            <p>
+              Largely separates into two responses:
+              <p>&emsp;•<em>the offended</em> by finding no real data analysis;</p>
+              <p>&emsp;•<em>the enlightened</em> to have emotionally be affected by the woven story.</p>
+            </p>
+
+            <p>
+              Originally posted as "Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea."
+              Full analysis post.
+              <span id="more">
+                <a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250">
+                  <b>More @Medium</b></a></span> </p>
 
             <hr>
             <!-- project image -->
