--- a/digi.html
+++ b/digi.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 ">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING <a href="index.html"><</a> </h4>
+              <h4> <a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2013</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="hamlet.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="archi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,9 +139,21 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. A digital tool to bring people together and have fun in front of the screen creating new expressive digital paintings. The more the merrier; the more people we have, more complete the digital canvas. It's about bringing out the expressive needs of humans and taking a memorable painting</p>
+            <h1>Face-detection public art.</h1>
+            <p>
+              The project detects faces and draws them in a expressionist way.
+              It was about bringing people's faces closely together to draw the world behind them.
+              To bring new meetings and digital art projected on to walls of people's faces and background in expressionism.
+            </p>
+
+            <p><strong>Artist Statement: </strong>The juxtaposition of analog and digital expressions on a digital canvas.
+              Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism.
+              A digital tool to bring people together and have fun in front of the screen creating new expressive digital paintings.
+              The more the merrier; the more people we have, more complete the digital canvas.
+              It's about bringing out the expressive needs of humans and taking a memorable painting</p>
 
             <p><b>Tools used:</b> openCV, processing</p>
+
             <span id="more"><p><a href="http://www.byunnnn.com/icm-000010-a-digital-analog-representation-of-us/"><b>Documenation: byunnnn blog</b></a><p></span>
 
             <hr>
