--- a/grphic_index.html
+++ b/grphic_index.html
@@ -191,14 +191,14 @@ He will take great delight in you;
 
             <!-- project image -->
             <div class="image">
-              <a href="image/web_cw_03.png"><img src="image/web_cw_03.png" class="img-responsive img-circle"></a>
+              <a href="http://www.in2crosswalk.org"><img src="image/web_cw_03.png" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <h5><em><a class="link" href="">WEB DESIGN</a></em></h5>
+            <h5><em><a class="link" href="http://www.in2crosswalk.org">WEB DESIGN</a></em></h5>
             <h6>FRONT-END, HTML, CSS, JAVASCRIPT, WEB-DESIGN</h6>
             <p>Freelance web designs for clients
-              <span id="more"><a href="">
+              <span id="more"><a href="http://www.in2crosswalk.org">
                 More>></a></span> </p>
             <!-- button -->
             <div class="more button"></div>
