--- a/videolab.html
+++ b/videolab.html
@@ -102,7 +102,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 ">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
+              <h4><a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -120,10 +120,10 @@
             New York, NY<br>
             2011-</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="typo.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
           </div>
 
           <!--  NEWS STRIP 2-->
@@ -136,6 +136,7 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
+            <h1>Graphic Researcher in interactive coding and video. </h1>
             <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design. More at <span id="more"><a href="http://vimeo.com/crzikrn">vimeo.com/crzikrn</a></span>.</p>
 
             <hr>
