--- a/divine.html
+++ b/divine.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 ">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>INSTALLATION/FABRICATION <a href="index.html"><</a> </h4>
+              <h4><a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -139,11 +139,20 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object.</p>
+            <h1>Projection mapping re-creating religious moments.</h1>
+            <p>Projection Mapping on a Religious Object;
+              re-creating the death on cross and overlaying study sketches of the object.
+            </p>
+            <p>
+              This project is a study of new media in projection.
+              By studying an artifact in its history, shape, and relgious value.
+              I was able to come up with a visual story to awe audiences and keep the holy silence of religion.
+            </p>
 
             <p>A study of creating media art with projection mapping. Process: Ideation Phase - Sketching/ Research Contours - Sketching Styles - Mapping Research/ After Effects - Storyboarding - Presentation Setup </p>
 
-            <p><span id="more"><a href="http://mediabyun.tumblr.com/"><b>Documentation: http://mediabyun.tumblr.com/</b></a></span><p>
+            <p><span id="more"><a href="http://mediabyun.tumblr.com/">
+              <b>Documentation website: http://mediabyun.tumblr.com/</b></a></span><p>
             <hr>
             <!-- project image -->
             <div class="image">
