--- a/hamlet.html
+++ b/hamlet.html
@@ -122,7 +122,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING <a href="index.html"><</a> </h4>
+              <h4> <a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -140,10 +140,10 @@
             New York, NY<br>
             2014</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="index.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
