--- a/listening.html
+++ b/listening.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
+              <h4><a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2015</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="data_analysis.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="carni.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,6 +139,7 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
+            <h1>A design technology story of one man getting to know a homeless shelter. </h1>
             <p>A speech-to-text device that forms lasting relationships between volunteers and the homeless. After visiting a homeless shelter for 8 weeks, I felt the need to create a communication form between the homeless residents and me. What they needed was simply attention, but as a volunteer I couldn’t be there all the time. I’m Listening is a personal expression to deeply connect with the homeless with whom we share society.</p>
             <p>No one wants to be forgotten, I’m Listening is a project that gives private shelter residents an easy form of communication by voice. It spreads care and love by letting them know someone is always listening to them. The little things of everyday conversations are sent as a private message to the volunteers. Phrases like “Keep warm.”, “When are you coming by?”, “I’d like to eat sweets.” </p>
 
