--- a/soundscape.html
+++ b/soundscape.html
@@ -104,7 +104,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>INSTALLATION/FABRICATION <a href="index.html"><</a> </h4>
+              <h4><a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2014</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="sketches.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="divine.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,7 +139,10 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>An educational toy, that creates music depending on the landscapes you create with it. Each side of the box is a switch that triggers different musical cues. It unconsciously teaches pattern making, coding and making music for the users.</p>
+            <h1>Creating an educational toy, learning to code with music.</h1>
+            <p>An educational toy, that creates music depending on the landscapes you create with it.
+              Each side of the box is a switch that triggers different musical cues.
+              It unconsciously teaches pattern making, coding and making music for the users.</p>
 
             <p><span id="more"><a href="http://www.byunnnn.com/pcomp-00000c-idea-for-sound-block-toys-creating-physical-shapes-for-your-beats/"><b>Idea Post 1</b></a></span></p>
             <p><span id="more"><a href="http://www.byunnnn.com/pcomp-00000d-fleshing-out-idea-for-sound-block-toys-creating-physical-shapes-for-your-beats-2/"><b>Idea Post 2</b></a></span></p>
