--- a/typo.html
+++ b/typo.html
@@ -103,7 +103,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12 animated bounceInLeft">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
+              <h4> <a href="index.html">&nbsp;</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,10 +122,10 @@
             New York, NY<br>
             2010-2015</p>
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
               <a href="archi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="videolab.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
-            </div>
+            </div> -->
 
           </div>
 
@@ -139,8 +139,12 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. Different solutions for capturing audience's attention and guiding for good readability.</p>
-
+            <h1>Typorgraphy & graphic styles.</h1>
+            <p>Personal typography projects over the years for different media platforms.
+               Branding, Books, Posters, Slides.
+               Different solutions for capturing audience's attention and guiding for good readability.
+             </p>
+             <p>Contact me for more.</p>
             <hr>
             <!-- project image -->
             <div class="image">
