--- a/typo.html
+++ b/typo.html
@@ -177,7 +177,7 @@
               <div class="col-md-4">
                 <h4>Typography Poster</h4>
                 <hr>
-                <a href="image/typo_05.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_05.png" data-lightbox="typo-box" data-title="Typography Justice">
                   <img src="image/typo_05.png" class="img-responsive wow animated fadeInUp"></a>
                 <hr>
                 <a href="image/typo_06.jpg" data-lightbox="typo-box" data-title="Typography Justice">
@@ -189,36 +189,43 @@
               <div class="col-md-4">
                 <h4>App Icon Design</h4>
                 <hr>
-                <a href="image/typo_07.jpg" data-lightbox="typo-box" data-title="Article Design">
+                <a href="image/typo_07.jpg" data-lightbox="typo-box" data-title="App Icon Design">
                   <img src="image/typo_07.jpg" class="img-responsive  wow animated fadeInUp">
                 </a>
-                <hr><a href="image/typo_08.jpg" data-lightbox="typo-box" data-title="Slides">
+                <hr><a href="image/typo_08.jpg" data-lightbox="typo-box" data-title="App Icon Design">
                 <img src="image/typo_08.jpg" class="img-responsive  wow animated fadeInUp"></a>
                 <h4>Social Media Post Design</h4>
-                <a href="image/typo_14.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_14.jpg" data-lightbox="typo-box" data-title="Social Media Post Design">
                   <img src="image/typo_14.jpg" class="img-responsive wow animated fadeInUp"></a>
-                <a href="image/typo_15.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_15.jpg" data-lightbox="typo-box" data-title="Social Media Post Design">
                   <img src="image/typo_15.jpg" class="img-responsive wow animated fadeInUp"></a>
-                <a href="image/typo_16.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_16.jpg" data-lightbox="typo-box" data-title="Social Media Post Design">
                 <img src="image/typo_16.jpg" class="img-responsive  wow animated fadeInUp"></a>
               </div>
 
 
-              <div class="col-md-4 wow animated fadeInUp">
+              <div class="col-md-4">
                 <h4>Data Visualization</h4>
                 <hr>
-                <a href="image/typo_11.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_11.png" data-lightbox="typo-box" data-title="Data Visualization">
                   <img src="image/typo_11.png" class="img-responsive wow animated fadeInUp"></a>
                 <hr>
-                <a href="image/typo_12.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_12.png" data-lightbox="typo-box" data-title="Data Visualization">
                   <img src="image/typo_12.png" class="img-responsive wow animated fadeInUp"></a>
               </div>
               <div class="col-md-4">
                 <h4>Article Layout Design </h4>
                 <hr>
-                <a href="image/typo_09.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <a href="image/typo_09.jpg" data-lightbox="typo-box" data-title="Article Layout Design">
                   <img src="image/typo_09.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
+              <div class="col-md-4">
+                <h4>NYU - PHD Brochure Layout Flow Design </h4>
+                <hr>
+                <a href="image/typo_17.png" data-lightbox="typo-box" data-title="NYU - PHD Brochure Layout">
+                  <img src="image/typo_17.png" class="img-responsive wow animated fadeInUp"></a>
+              </div>
+
             </div>
             <!-- project description -->
 
