--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ He will take great delight in you;
 
                 <h2>Hi, I'm Karam Byun. <br>
                   A Digital/Graphic Designer and
-                  a creative HTML Developer based in New York.
+                  a creative Web Developer based in New York.
                   <br>-<br><br>
                   Professionally, I craft experiences of brands/campaigns for the web and print.
                   <br><br>
