--- a/typo.html
+++ b/typo.html
@@ -149,6 +149,17 @@
             <!-- project image -->
             <div class="image">
 
+              <div class="col-md-12">
+                <h4>NYU Biology Department PHD Brochure</h4>
+                <hr>
+                <a href="image/NYU_00.jpg" data-lightbox="typo-box" data-title="NYU Biology Brochure">
+                  <img src="image/NYU_00.jpg" class="img-responsive wow animated fadeInUp"></a>
+                <a href="image/NYU_01.jpg" data-lightbox="typo-box" data-title="NYU Biology Brochure">
+                  <img src="image/NYU_01.jpg" class="img-responsive wow animated fadeInUp"></a>
+                <a href="image/NYU_02.jpg" data-lightbox="typo-box" data-title="NYU Biology Brochure">
+                  <img src="image/NYU_02.jpg" class="img-responsive wow animated fadeInUp"></a>
+              </div>
+
               <div class="col-md-6">
                 <h4>Name Branding/ Logo </h4>
                 <hr>
