--- a/typo.html
+++ b/typo.html
@@ -160,6 +160,26 @@
                   <img src="image/NYU_02.jpg" class="img-responsive wow animated fadeInUp"></a>
               </div>
 
+              <div class="col-md-12">
+                <h4>Logo Chesterfield</h4>
+                <hr>
+                <a href="image/Chesterfield_00.jpg" data-lightbox="typo-box" data-title="Chesterfield Boutique Shop Logo">
+                  <img src="image/Chesterfield_00.jpg" class="img-responsive wow animated fadeInUp"></a>
+              </div>
+
+              <div class="col-md-12">
+                <h4>Posters</h4>
+                <hr>
+                <div class="col-md-6">
+                <a href="image/poster_00.jpg" data-lightbox="typo-box" data-title="Arch Festival">
+                  <img src="image/poster_00.jpg" class="img-responsive wow animated fadeInUp"></a>
+                </div>
+                <div class="col-md-6">
+                <a href="image/poster_01.jpg" data-lightbox="typo-box" data-title="No Tries">
+                  <img src="image/poster_01.jpg" class="img-responsive wow animated fadeInUp"></a>
+                </div>
+              </div>
+
               <div class="col-md-6">
                 <h4>Name Branding/ Logo </h4>
                 <hr>
@@ -185,7 +205,7 @@
               </div>
 
               <!-- lower part -->
-              <div class="col-md-4">
+              <!-- <div class="col-md-4">
                 <h4>Typography Poster</h4>
                 <hr>
                 <a href="image/typo_05.png" data-lightbox="typo-box" data-title="Typography Justice">
@@ -196,7 +216,8 @@
                 <hr>
                 <a href="image/typo_10.jpg" data-lightbox="typo-box" data-title="Typography Justice">
                   <img src="image/typo_10.jpg" class="img-responsive  wow animated fadeInUp"></a>
-              </div>
+              </div> -->
+
               <div class="col-md-4">
                 <h4>App Icon Design</h4>
                 <hr>
