--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ He will take great delight in you;
 
                 <!-- project image -->
                 <div class="image">
-                  <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+                  <a href="typo.html"><img src="image/graphic_all.gif" class="img-responsive img-circle"></a>
                 </div>
                 <!-- project description -->
                 <h5><em><a class="link" href="typo.html">DIGITAL/GRAPHIC DESIGN</a></em></h5>
