--- a/typo.html
+++ b/typo.html
@@ -150,7 +150,7 @@
             <div class="image">
 
               <div class="col-md-12">
-                <h4>NYU Biology Department PHD Brochure</h4>
+                <h4>NYU Biology Department, PHD Brochure</h4>
                 <hr>
                 <a href="image/NYU_00.jpg" data-lightbox="typo-box" data-title="NYU Biology Brochure">
                   <img src="image/NYU_00.jpg" class="img-responsive wow animated fadeInUp"></a>
@@ -161,7 +161,7 @@
               </div>
 
               <div class="col-md-12">
-                <h4>Logo Chesterfield</h4>
+                <h4>Chesterfield Store Logo at Brooklyn</h4>
                 <hr>
                 <a href="image/Chesterfield_00.jpg" data-lightbox="typo-box" data-title="Chesterfield Boutique Shop Logo">
                   <img src="image/Chesterfield_00.jpg" class="img-responsive wow animated fadeInUp"></a>
