--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ He will take great delight in you;
           <!--  PHRASE-->
           <div class="container">
             <p><em>
-              A Digital/Graphic Designer.
-              <br>A Creative HTML Developer.
+              A Creative Director.
+              <br>A Strategy Technologist.
             </em></p>
           </div>
           <!-- <hr width="97%"> -->
@@ -118,8 +118,8 @@ He will take great delight in you;
                 <h4></h4>
 
                 <h2>Hi, I'm Karam Byun. <br>
-                  A Digital/Graphic Designer and
-                  a creative Web Developer based in New York.
+                  A Creative Director and
+                  a Strategy Researcher based in Los Angeles.
                   <br>-<br><br>
                   Professionally, I craft experiences of brands/campaigns for the web and print.
                   <br><br>
